
 * src/templates.c, src/document.c:
   Use LF line endings for templates internally instead of default
   pref because the default can change. This fixes missing line
   endings sometimes when changing default setting.
 * src/document.c:
   Fix not reporting an error message when saving a document fails.
   Check result of fclose().


2010-11-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/templates.c, src/filetypes.c:
   Save build commands for filetype None (patch by Lex, thanks).
   Make filetypes_get_conf_extension() return "common" for filetype
   None.
 * src/templates.c:
   Convert line endings for file templates.
   Fix line endings when using file header template in a file template
   (oops).
 * src/utils.c, src/utils.h:
   Make utils_ensure_same_eol_characters() convert all wrong line
   endings to the desired one, not just the most common one.


2010-11-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Respect 'Smart' home key for Shift+Alt+Home (patch by Dimitar
   Zhekov, thanks).
 * src/interface.c, src/keybindings.c, src/ui_utils.c, geany.glade:
   Restore top-level editor popup item 'Find Document Usage'.
 * src/interface.c, src/ui_utils.c, geany.glade:
   Remove duplicates in 'Insert Comments' editor popup menu; rename
   submenu 'More'.
   Separate main menu insertion comments depending on number of times
   used in a document.
 * data/filetypes.*, data/colorschemes/alt.conf:
   Rename word/word2 named styles to keyword/keyword2.
 * doc/geany.txt, doc/geany.html:
   Mention that indentation settings can be overridden per-project.
 * src/interface.c, src/callbacks.c, src/callbacks.h, src/document.c,
   doc/geany.txt, doc/geany.html, geany.glade:
   Add 'Project->Apply Default Indentation' menu command to override
   every document's indentation settings.
   Improve 'Indentation' section docs.


2010-11-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c: